[project]
name = "capacita-scpts"
version = "0.1.0"
description = ""
authors = [
    {name = "Vinicius Santos Júnior",email = "vinicius.junior@planejamento.mg.gov.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
